--- a/app/views/work_portfolios/index.html.erb
+++ b/app/views/work_portfolios/index.html.erb
@@ -2,6 +2,5 @@
 <% @portfolios.each do |item| %>
    <h2> <%=item.title %> </h2>
    <p> <%= item.body %> </p>
-   <%= image_tag item.main_image %>
-
+   <%= image_tag item.thumb_image unless item.thumb_image.nil?%>
 <%end%>
